@@ -63,7 +63,7 @@ public class EditMerge {
                                                      .flatMap(group -> group.citationsInStorageOrder.stream())
                                                      .collect(Collectors.toList());
 
-                CitationType citationType = groups.get(0).citationType;
+                CitationType citationType = groups.getFirst().citationType;
                 List<Optional<OOText>> pageInfos = frontend.backend.combinePageInfos(groups);
 
                 frontend.removeCitationGroups(groups, doc);
