@@ -54,6 +54,7 @@ public class BibDatabase {
     private final ObservableList<BibEntry> entries = FXCollections.synchronizedObservableList(FXCollections.observableArrayList(BibEntry::getObservables));
     private Map<String, BibtexString> bibtexStrings = new ConcurrentHashMap<>();
 
+    // Not included in equals, because it is not relevant for the content of the database
     private final EventBus eventBus = new EventBus();
 
     private String preamble;
@@ -148,12 +149,7 @@ public class BibDatabase {
      * Returns the entry with the given citation key.
      */
     public synchronized Optional<BibEntry> getEntryByCitationKey(String key) {
-        for (BibEntry entry : entries) {
-            if (key.equals(entry.getCitationKey().orElse(null))) {
-                return Optional.of(entry);
-            }
-        }
-        return Optional.empty();
+        return entries.stream().filter(entry -> Objects.equals(entry.getCitationKey().orElse(null), key)).findFirst();
     }
 
     /**
@@ -205,7 +201,7 @@ public class BibDatabase {
         if (newEntries.isEmpty()) {
             eventBus.post(new EntriesAddedEvent(newEntries, eventSource));
         } else {
-            eventBus.post(new EntriesAddedEvent(newEntries, newEntries.get(0), eventSource));
+            eventBus.post(new EntriesAddedEvent(newEntries, newEntries.getFirst(), eventSource));
         }
         entries.addAll(newEntries);
     }
@@ -402,9 +398,9 @@ public class BibDatabase {
      * references.
      *
      * @param entriesToResolve A collection of BibtexEntries in which all strings of the form
-     *                #xxx# will be resolved against the hash map of string
-     *                references stored in the database.
-     * @param inPlace If inPlace is true then the given BibtexEntries will be modified, if false then copies of the BibtexEntries are made before resolving the strings.
+     *                         #xxx# will be resolved against the hash map of string
+     *                         references stored in the database.
+     * @param inPlace          If inPlace is true then the given BibtexEntries will be modified, if false then copies of the BibtexEntries are made before resolving the strings.
      * @return a list of bibtexentries, with all strings resolved. It is dependent on the value of inPlace whether copies are made or the given BibtexEntries are modified.
      */
     public List<BibEntry> resolveForStrings(Collection<BibEntry> entriesToResolve, boolean inPlace) {
@@ -548,7 +544,7 @@ public class BibDatabase {
     /**
      * Registers a listener object (subscriber) to the internal event bus.
      * The following events are posted:
-     *
+     * <p>
      * - {@link EntriesAddedEvent}
      * - {@link EntryChangedEvent}
      * - {@link EntriesRemovedEvent}
@@ -637,5 +633,26 @@ public class BibDatabase {
      */
     public String getNewLineSeparator() {
         return newLineSeparator;
+    }
+
+    @Override
+    public boolean equals(Object o) {
+        if (this == o) {
+            return true;
+        }
+        if (!(o instanceof BibDatabase that)) {
+            return false;
+        }
+        return Objects.equals(entries, that.entries)
+                && Objects.equals(bibtexStrings, that.bibtexStrings)
+                && Objects.equals(preamble, that.preamble)
+                && Objects.equals(epilog, that.epilog)
+                && Objects.equals(sharedDatabaseID, that.sharedDatabaseID)
+                && Objects.equals(newLineSeparator, that.newLineSeparator);
+    }
+
+    @Override
+    public int hashCode() {
+        return Objects.hash(entries, bibtexStrings, preamble, epilog, sharedDatabaseID, newLineSeparator);
     }
 }
